--- a/src/html/home-guest.html
+++ b/src/html/home-guest.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+    <title>IPSSI Timer</title>
     <meta charset="utf-8">
     <meta content="ie=edge" http-equiv="x-ua-compatible">
     <link href="#" rel="shortcut icon">
@@ -9,19 +10,26 @@
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 
 </head>
-<body>
+<body class="home-guest-page">
 
-<script>
-    function scrollToAnchor( name )
-    {
-        const anchorElement = document.getElementById( name );
-        console.log({anchorElement});
-        window.scrollTo( {
-            top : anchorElement.getBoundingClientRect().top
-        } );
-        return 0;
-    }
-</script>
+<nav class="navbar navbar-transparent bg-transparent">
+    <div class="navbar-nav" id="leftNav">
+        <a class="nav-item nav-link active" href="#">IPSSI Timer <span class="sr-only">(current)</span></a>
+    </div>
+    <div class="navbar-nav" id="rightNav">
+        <!--<a class="nav-item nav-link" href="#">Mon compte</a>-->
+    </div>
+</nav>
+
+<section id="leftSection">
+f
+</section>
+
+<section id="rightSection">
+f
+</section>
+
+
 
 <script
         src="https://code.jquery.com/jquery-3.4.1.min.js"
