--- a/src/html/home-user.html
+++ b/src/html/home-user.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+    <title>IPSSI Timer</title>
     <meta charset="utf-8">
     <meta content="ie=edge" http-equiv="x-ua-compatible">
     <link href="#" rel="shortcut icon">
@@ -10,18 +11,6 @@
 
 </head>
 <body>
-
-<script>
-    function scrollToAnchor( name )
-    {
-        const anchorElement = document.getElementById( name );
-        console.log({anchorElement});
-        window.scrollTo( {
-            top : anchorElement.getBoundingClientRect().top
-        } );
-        return 0;
-    }
-</script>
 
 <script
         src="https://code.jquery.com/jquery-3.4.1.min.js"
