Updated home-guest view

--- a/src/html/home-guest.html
+++ b/src/html/home-guest.html
@@ -22,11 +22,11 @@
 </nav>
 
 <section id="leftSection">
-f
+    <h1>Rester<br>connecté</h1>
 </section>
 
 <section id="rightSection">
-f
+    <h1>S'inscrire</h1>
 </section>
 
 
