--- a/src/html/group.html
+++ b/src/html/group.html
@@ -10,8 +10,7 @@
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 
 </head>
-<body class="home-user-page">
-
+<body class="home-guest-page">
 
 <nav class="navbar navbar-transparent bg-transparent">
     <div class="navbar-nav" id="leftNav">
@@ -23,14 +22,13 @@
 </nav>
 
 <section id="leftSection">
-    <h1>Mes<br>groupes</h1>
-    <div class="groups-grid"></div>
+    <h1>Projets</h1>
 </section>
 
 <section id="rightSection">
-    <h1>Groupes<br>rejoints</h1>
-    <div class="groups-grid"></div>
+    <h1>Utilisateurs</h1>
 </section>
+
 
 
 <script
