Updated views 'home_user' and 'group' + updated routes + added deploy job in .github directory

--- a/src/html/error_404.html
+++ b/src/html/error_404.html
@@ -10,7 +10,7 @@
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 
 </head>
-<body class="group-page">
+<body class="home-guest-page">
 
 <nav class="navbar navbar-transparent bg-transparent">
     <div class="navbar-nav" id="leftNav">
@@ -22,17 +22,10 @@
 </nav>
 
 <section id="leftSection">
-    <h1>Projets</h1>
 </section>
 
 <section id="rightSection">
-    <h1>Utilisateurs</h1>
-    <div class="users-grid">
-        <div class="user">Ulysse ARNAUD</div>
-        <div class="user">Abd-el-illah BELLIFA</div>
-        <div class="user">Aurélien SANTANA</div>
-        <div class="user">Ryane ABBACHE</div>
-    </div>
+    <h1>Error 404</h1>
 </section>
 
 
