Updated pages and created group and groups module

--- a/src/html/pages/home-guest.html
+++ b/src/html/pages/home-guest.html
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col text-center">
                 <h2>IPSSI Timer</h2>
-                <span class="subtitle ml-auto mr-auto m-5">Vous l'avez trouvé, ne perdez pas votre temps à choisir des outils gratuits pour gérer votre temps de travail !</span>
+                <span class="subtitle ml-auto mr-auto m-5">Vous l'avez trouvé, ne perdez plus votre temps à choisir des outils gratuits pour gérer votre temps de travail !</span>
             </div>
         </div>
         <div class="row">
