--- a/src/html/pages/home-user.html
+++ b/src/html/pages/home-user.html
@@ -1,11 +1,15 @@
 
 
 <section id="myGroups">
-    <h1>Mes<br>groupes</h1>
-    <div class="groups-grid"></div>
+    <div class="container">
+        <h1>Mes<br>groupes</h1>
+        <div class="groups"></div>
+    </div>
 </section>
 
 <section id="groupsJoined">
-    <h1>Groupes<br>rejoints</h1>
-    <div class="groups-grid"></div>
+    <div class="container">
+        <h1>Groupes<br>rejoints</h1>
+        <div class="groups"></div>
+    </div>
 </section>
