Updated views + started group view

--- a/src/html/pages/home-guest.html
+++ b/src/html/pages/home-guest.html
@@ -54,7 +54,7 @@
                 </div>
 
                 <div class="col-12">
-                    <button type="button" class="btn btn-lg rounded btn-outline-primary">S'inscrire</button>
+                    <button type="button" class="btn btn-lg rounded btn-primary">S'inscrire</button>
                 </div>
 
             </form>
