--- a/src/html/pages/group.html
+++ b/src/html/pages/group.html
@@ -1,31 +1,9 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <title>IPSSI Timer</title>
-    <meta charset="utf-8">
-    <meta content="ie=edge" http-equiv="x-ua-compatible">
-    <link href="#" rel="shortcut icon">
 
-    <link rel="stylesheet"
-          href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-
-</head>
-<body class="group-page">
-
-<nav class="navbar navbar-transparent bg-transparent">
-    <div class="navbar-nav" id="leftNav">
-        <a class="nav-item nav-link active" href="#">IPSSI Timer <span class="sr-only">(current)</span></a>
-    </div>
-    <div class="navbar-nav" id="rightNav">
-        <!--<a class="nav-item nav-link" href="#">Mon compte</a>-->
-    </div>
-</nav>
-
-<section id="leftSection">
+<section id="projects">
     <h1>Projets</h1>
 </section>
 
-<section id="rightSection">
+<section id="users">
     <h1>Utilisateurs</h1>
     <div class="users-grid">
         <div class="user">Ulysse ARNAUD</div>
@@ -34,15 +12,3 @@
         <div class="user">Ryane ABBACHE</div>
     </div>
 </section>
-
-
-
-<script
-        src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-        crossorigin="anonymous"></script>
-<script
-        src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-
-</body>
-</html>
