--- a/src/html/index.html
+++ b/src/html/index.html
@@ -20,7 +20,14 @@
     </nav>
 
     <!-- Page -->
-    <section id="page"></section>
+    <section id="page" data-view="loading">
+        <section id="leftSection">
+            <span class="h2">Chargement...</span>
+        </section>
+        <section id="rightSection">
+            <p>Si vous arrivez à lire ce message, alors il y a eu un soucis lors du chargement, sinon votre connexion est très faible.</p>
+        </section>
+    </section>
 
     <!-- Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
