Added somes pages + fixed some bugs

--- a/src/html/pages/error-404.html
+++ b/src/html/pages/error-404.html
@@ -1,8 +1,9 @@
 
 
 <section id="leftSection">
+    <h1>Erreur 404</h1>
 </section>
 
 <section id="rightSection">
-    <h1>Error 404</h1>
+    <p>La page demandée n'existe pas.</p>
 </section>
