--- a/src/html/pages/project.html
+++ b/src/html/pages/project.html
@@ -1,42 +1,8 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <title>IPSSI Timer</title>
-    <meta charset="utf-8">
-    <meta content="ie=edge" http-equiv="x-ua-compatible">
-    <link href="#" rel="shortcut icon">
-
-    <link rel="stylesheet"
-          href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-
-</head>
-<body class="home-guest-page">
-
-<nav class="navbar navbar-transparent bg-transparent">
-    <div class="navbar-nav" id="leftNav">
-        <a class="nav-item nav-link active" href="#">IPSSI Timer <span class="sr-only">(current)</span></a>
-    </div>
-    <div class="navbar-nav" id="rightNav">
-        <!--<a class="nav-item nav-link" href="#">Mon compte</a>-->
-    </div>
-</nav>
 
 <section id="leftSection">
-    <h1>Projets</h1>
+    <h1>Chronometre</h1>
 </section>
 
 <section id="rightSection">
-    <h1>Utilisateurs</h1>
+    <h1>Statistiques</h1>
 </section>
-
-
-
-<script
-        src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-        crossorigin="anonymous"></script>
-<script
-        src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-
-</body>
-</html>
