--- a/src/html/pages/group.html
+++ b/src/html/pages/group.html
@@ -1,14 +1,70 @@
 
 <section id="projects">
-    <h1>Projets</h1>
+    <div class="container">
+        <h2>Projets</h2>
+        <div class="projects"></div>
+    </div>
 </section>
 
 <section id="users">
-    <h1>Utilisateurs</h1>
-    <div class="users-grid">
-        <div class="user">Ulysse ARNAUD</div>
-        <div class="user">Abd-el-illah BELLIFA</div>
-        <div class="user">Aurélien SANTANA</div>
-        <div class="user">Ryane ABBACHE</div>
+    <div class="container">
+        <h2>Utilisateurs</h2>
+        <div class="users"></div>
     </div>
 </section>
+
+<div class="modal" tabindex="-1" role="dialog" id="modalCreateProject">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Créer un projet</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <form action="/create-project" class="w-100">
+                        <div class="col-12">
+                            <div class="form-group">
+                                <input type="text" class="form-control" name="name" placeholder="Nom du projet">
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuler</button>
+                <button type="button" class="btn btn-primary">Appliquer</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal" tabindex="-1" role="dialog" id="modalAddUser">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Ajouter un utilisateur</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <form action="/add-user" class="w-100">
+                        <div class="col-12">
+                            <div class="form-group">
+                                <input type="text" class="form-control" name="name" placeholder="Nom de l'utilisateur">
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuler</button>
+                <button type="button" class="btn btn-primary">Appliquer</button>
+            </div>
+        </div>
+    </div>
+</div>
