--- a/src/html/pages/project.html
+++ b/src/html/pages/project.html
@@ -4,7 +4,7 @@
         <h1>Chronometre</h1>
         <div class="row">
             <div class="col">
-                <div class="timer play">
+                <div class="timer">
                     <div class="timer-component hour">
                         <div class="hand"><span></span></div>
                         <div class="hand"><span></span></div>
