--- a/src/html/pages/project.html
+++ b/src/html/pages/project.html
@@ -2,7 +2,7 @@
 <section id="leftSection">
     <div class="container">
         <h1>Chronometre</h1>
-        <div class="row">
+        <div class="row row-timer">
             <div class="col">
                 <div class="timer pause">
                     <div class="timer-component hour">
