--- a/src/html/pages/home-guest.html
+++ b/src/html/pages/home-guest.html
@@ -1,4 +1,3 @@
-
 <section id="login">
     <div class="container">
         <div class="row">
@@ -10,18 +9,15 @@
         <div class="row">
             <form action="/login" class="w-70 m-auto">
 
-                <div class="col-12">
-                    <div class="form-group">
-                        <input type="text" class="form-control rounded form-control-lg" placeholder="Nom">
-                    </div>
-                    <div class="form-group">
-                        <input type="password" class="form-control rounded form-control-lg" placeholder="Mot de passe">
-                    </div>
+                <div class="mb-3">
+                    <input type="text" class="form-control rounded form-control-lg" placeholder="Nom">
                 </div>
 
-                <div class="col-12">
-                    <button type="button" class="btn btn-lg rounded btn-outline-light" id="btnLogin">Se connecter</button>
+                <div class="mb-3">
+                    <input type="password" class="form-control rounded form-control-lg" placeholder="Mot de passe">
                 </div>
+
+                <button type="button" class="btn btn-lg rounded btn-outline-light" id="btnLogin">Se connecter</button>
 
             </form>
         </div>
@@ -38,24 +34,25 @@
         <div class="row">
             <form action="/register" class="w-70 m-auto">
 
-                <div class="col-12">
-                    <div class="form-group">
-                        <input type="text" class="form-control rounded form-control-lg" name="name" placeholder="Nom">
-                    </div>
-                    <div class="form-group">
-                        <input type="email" class="form-control rounded form-control-lg" name="email" placeholder="Email">
-                    </div>
-                    <div class="form-group">
-                        <input type="password" class="form-control rounded form-control-lg" name="password" placeholder="Mot de passe">
-                    </div>
-                    <div class="form-group">
-                        <input type="password" class="form-control rounded form-control-lg" name="password_confirmation" placeholder="Confirmation mot de passe">
-                    </div>
+                <div class="form-group">
+                    <input type="text" class="form-control rounded form-control-lg" name="name" placeholder="Nom">
                 </div>
 
-                <div class="col-12">
-                    <button type="button" class="btn btn-lg rounded btn-primary" id="btnRegister">S'inscrire</button>
+                <div class="form-group">
+                    <input type="email" class="form-control rounded form-control-lg" name="email"
+                           placeholder="Email">
                 </div>
+                <div class="form-group">
+                    <input type="password" class="form-control rounded form-control-lg" name="password"
+                           placeholder="Mot de passe">
+                </div>
+                <div class="form-group">
+                    <input type="password" class="form-control rounded form-control-lg" name="password_confirmation"
+                           placeholder="Confirmation mot de passe">
+                </div>
+
+
+                <button type="button" class="btn btn-lg rounded btn-primary" id="btnRegister">S'inscrire</button>
 
             </form>
         </div>
