Updated home guest with bootstrap update

--- a/src/html/pages/home-guest.html
+++ b/src/html/pages/home-guest.html
@@ -6,8 +6,8 @@
                 <span class="subtitle ml-auto mr-auto m-5">Vous l'avez trouvé, ne perdez plus votre temps à choisir des outils gratuits pour gérer votre temps de travail !</span>
             </div>
         </div>
-        <div class="row">
-            <form action="/login" class="w-70 m-auto">
+        <div class="row m-auto">
+            <form action="/login" class="w-75 m-auto">
 
                 <div class="mb-3">
                     <input type="text" class="form-control rounded form-control-lg" placeholder="Nom">
@@ -31,22 +31,22 @@
                 <h2 class="mb-5">S'inscrire</h2>
             </div>
         </div>
-        <div class="row">
-            <form action="/register" class="w-70 m-auto">
+        <div class="row m-auto">
+            <form action="/register" class="w-75 m-auto">
 
-                <div class="form-group">
+                <div class="mb-3">
                     <input type="text" class="form-control rounded form-control-lg" name="name" placeholder="Nom">
                 </div>
 
-                <div class="form-group">
+                <div class="mb-3">
                     <input type="email" class="form-control rounded form-control-lg" name="email"
                            placeholder="Email">
                 </div>
-                <div class="form-group">
+                <div class="mb-3">
                     <input type="password" class="form-control rounded form-control-lg" name="password"
                            placeholder="Mot de passe">
                 </div>
-                <div class="form-group">
+                <div class="mb-3">
                     <input type="password" class="form-control rounded form-control-lg" name="password_confirmation"
                            placeholder="Confirmation mot de passe">
                 </div>
