--- a/src/html/pages/home-guest.html
+++ b/src/html/pages/home-guest.html
@@ -2,7 +2,9 @@
     <div class="container">
         <div class="row">
             <div class="col text-center">
-                <h2>IPSSI Timer</h2>
+                <picture>
+                    <img src="img/logo.svg" alt="TimeHub">
+                </picture>
                 <span class="subtitle ml-auto mr-auto m-5">Vous l'avez trouvé, ne perdez plus votre temps à choisir des outils gratuits pour gérer votre temps de travail !</span>
             </div>
         </div>
@@ -10,7 +12,7 @@
             <form action="/login" class="w-75 m-auto">
 
                 <div class="mb-3">
-                    <input type="text" class="form-control rounded form-control-lg" placeholder="Nom">
+                    <input type="email" class="form-control rounded form-control-lg" placeholder="Email">
                 </div>
 
                 <div class="mb-3">
