--- a/src/html/pages/home-guest.html
+++ b/src/html/pages/home-guest.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col text-center">
                 <picture>
-                    <img src="img/logo.svg" alt="TimeHub">
+                    <img src="img/logo.svg" alt="TimeHub" class="logo">
                 </picture>
                 <span class="subtitle ml-auto mr-auto m-5">Vous l'avez trouvé, ne perdez plus votre temps à choisir des outils gratuits pour gérer votre temps de travail !</span>
             </div>
