MAJ front : logo + form data dans fetch

--- a/src/html/pages/home-guest.html
+++ b/src/html/pages/home-guest.html
@@ -2,8 +2,8 @@
     <div class="container">
         <div class="row">
             <div class="col text-center">
-                <picture>
-                    <img src="img/logo.svg" alt="TimeHub" class="logo">
+                <picture class="logo">
+                    <img src="img/logo.png" alt="TimeHub">
                 </picture>
                 <span class="subtitle ml-auto mr-auto m-5">Vous l'avez trouvé, ne perdez plus votre temps à choisir des outils gratuits pour gérer votre temps de travail !</span>
             </div>
