--- a/src/html/pages/home-guest.html
+++ b/src/html/pages/home-guest.html
@@ -9,7 +9,7 @@
             </div>
         </div>
         <div class="row m-auto">
-            <form action="/login" class="w-75 m-auto">
+            <form action="/login" class="w-75 m-auto" id="form-login">
 
                 <div class="mb-3">
                     <input type="email" class="form-control rounded form-control-lg" placeholder="Email">
@@ -34,7 +34,7 @@
             </div>
         </div>
         <div class="row m-auto">
-            <form action="/register" class="w-75 m-auto">
+            <form action="/register" class="w-75 m-auto" id="form-register">
 
                 <div class="mb-3">
                     <input type="text" class="form-control rounded form-control-lg" name="name" placeholder="Nom">
