--- a/src/html/pages/home-guest.html
+++ b/src/html/pages/home-guest.html
@@ -12,11 +12,11 @@
             <form action="/login" class="w-75 m-auto" id="form-login">
 
                 <div class="mb-3">
-                    <input type="email" class="form-control rounded form-control-lg" placeholder="Email">
+                    <input type="email" class="form-control rounded form-control-lg" placeholder="Email" name="email">
                 </div>
 
                 <div class="mb-3">
-                    <input type="password" class="form-control rounded form-control-lg" placeholder="Mot de passe">
+                    <input type="password" class="form-control rounded form-control-lg" placeholder="Mot de passe" name="password">
                 </div>
 
                 <button type="button" class="btn btn-lg rounded btn-outline-light" id="btnLogin">Se connecter</button>
