--- a/src/html/pages/home-guest.html
+++ b/src/html/pages/home-guest.html
@@ -9,7 +9,7 @@
             </div>
         </div>
         <div class="row m-auto">
-            <form action="/login" class="w-75 m-auto" id="form-login">
+            <form action="http://localhost:8001/login" class="w-75 m-auto" id="form-login">
 
                 <div class="mb-3">
                     <input type="email" class="form-control rounded form-control-lg" placeholder="Email" name="email">
@@ -19,7 +19,7 @@
                     <input type="password" class="form-control rounded form-control-lg" placeholder="Mot de passe" name="password">
                 </div>
 
-                <button type="button" class="btn btn-lg rounded btn-outline-light" id="btnLogin">Se connecter</button>
+                <button type="submit" class="btn btn-lg rounded btn-outline-light" id="btnLogin">Se connecter</button>
 
             </form>
         </div>
@@ -34,7 +34,7 @@
             </div>
         </div>
         <div class="row m-auto">
-            <form action="/register" class="w-75 m-auto" id="form-register">
+            <form action="http://localhost:8001/register" class="w-75 m-auto" id="form-register">
 
                 <div class="mb-3">
                     <input type="text" class="form-control rounded form-control-lg" name="name" placeholder="Nom">
@@ -54,7 +54,7 @@
                 </div>
 
 
-                <button type="button" class="btn btn-lg rounded btn-primary" id="btnRegister">S'inscrire</button>
+                <button type="submit" class="btn btn-lg rounded btn-primary" id="btnRegister">S'inscrire</button>
 
             </form>
         </div>
