--- a/src/html/pages/home-guest.html
+++ b/src/html/pages/home-guest.html
@@ -9,7 +9,7 @@
             </div>
         </div>
         <div class="row m-auto">
-            <form action="http://localhost:8001/api/v1/login" class="w-75 m-auto" id="form-login">
+            <form action="http://localhost:8001/api/v1/login" class="w-75 m-auto" id="form-login" method="post">
 
                 <div class="mb-3">
                     <input type="email" class="form-control rounded form-control-lg" placeholder="Email" name="email">
@@ -34,7 +34,7 @@
             </div>
         </div>
         <div class="row m-auto">
-            <form action="http://localhost:8001/api/v1/register" class="w-75 m-auto" id="form-register">
+            <form action="http://localhost:8001/api/v1/register" class="w-75 m-auto" id="form-register" method="post">
 
                 <div class="mb-3">
                     <input type="text" class="form-control rounded form-control-lg" name="name" placeholder="Nom">
