--- a/src/html/pages/home-guest.html
+++ b/src/html/pages/home-guest.html
@@ -19,7 +19,7 @@
                     <input type="password" class="form-control rounded form-control-lg" placeholder="Mot de passe" name="password">
                 </div>
 
-                <button type="submit" class="btn btn-lg rounded btn-outline-light" id="btnLogin">Se connecter</button>
+                <button type="button" class="btn btn-lg rounded btn-outline-light" id="btnLogin">Se connecter</button>
 
             </form>
         </div>
@@ -54,7 +54,7 @@
                 </div>
 
 
-                <button type="submit" class="btn btn-lg rounded btn-primary" id="btnRegister">S'inscrire</button>
+                <button type="button" class="btn btn-lg rounded btn-primary" id="btnRegister">S'inscrire</button>
 
             </form>
         </div>
