Dernier maj pour le front

--- a/src/html/pages/user.html
+++ b/src/html/pages/user.html
@@ -2,6 +2,10 @@
 <section id="leftSection">
     <div class="container">
         <h2>Utilisateur</h2>
+        <div class="row">
+            <div class="avatar" style="width:150px;height:150px;border-radius:50%;background-image:url(https://shorturl.at/mtEX3);background-repeat:no-repeat;background-position:center;background-size:cover;">&nbsp;</div>
+            <span class="username">Un utilisateur</span>
+        </div>
     </div>
 </section>
 
