--- a/src/html/pages/project.html
+++ b/src/html/pages/project.html
@@ -31,5 +31,8 @@
 </section>
 
 <section id="rightSection">
-    <h1>Statistiques</h1>
+    <div class="container">
+        <h1>Statistiques</h1>
+        <div class="entries"></div>
+    </div>
 </section>
